--- a/.github/workflows/infrastruktur-workflow.yml
+++ b/.github/workflows/infrastruktur-workflow.yml
@@ -11,6 +11,7 @@ env:
 jobs:
   build-and-deploy:
     runs-on: windows-latest
+    environment: Dev
     steps:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v2
